hphp/hack/test/typecheck/aktuple/list_ok.php.exp
File "list_ok.php", line 9, characters 15-21:
Invalid argument (Typing[4110])
File "list_ok.php", line 13, characters 22-27:
Expected `string`
File "list_ok.php", line 6, characters 15-15:
But got `int`
File "list_ok.php", line 10, characters 12-15:
Invalid argument (Typing[4110])
File "list_ok.php", line 14, characters 19-21:
Expected `int`
File "list_ok.php", line 6, characters 18-22:
But got `string`
